-- Copyright 2018 Google LLC
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--      http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

name:                defunc
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable defunc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       AST,
                       CPS,
                       Defunc,
                       Eval,
                       Meta,
                       Parser,
                       Pretty,
                       TypeChecker,
                       Unification
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       megaparsec,
                       unbound-generics,
                       prettyprinter,
                       mtl,
                       pretty-show,
                       safe,
                       monad-loops
  ghc-options: -O2
